
EXTRA_DIST= robinhood.init			\
	robinhood.init.in			\
	robinhood.init.sles         		\
	robinhood.init.sles.in      		\
	sysconfig_robinhood			\
	sysconfig_robinhood.in			\
	type_gen.pl				\
	indent.sh 				\
	demo/disk_usage.sh			\
	demo/migr_purge.sh			\
	demo/rh.migr_purge.conf			\
	demo/write_data.sh

dist_sbin_SCRIPTS=rbh-config
