
EXTRA_DIST= test_suite/1-test_setup_lustre.sh	\
    test_suite/1-test_setup_posix.sh	\
	test_suite/2-run-tests.sh		\
	test_suite/3-tests-lustre.sh	\
	test_suite/4-test_report.sh		\
	test_suite/cleanup.sh		\
	test_suite/README.rst		\
	test_suite/bench_rpc.sh		\
	test_suite/cfg		    \
    huge_posix/cfg		 \
    huge_posix/1-test_setup.sh      \
    huge_posix/2-run-tests.sh	    \
	test_compil_switches.sh	    \
	fill_fs.sh
