
configdir = @CONFDIR@/robinhood.d
templatesdir = $(configdir)/templates
includesdir = $(configdir)/includes

dist_templates_DATA = basic.conf example_alerts.conf example_checksum.conf \
		      example_cleanup.conf example_lhsm.conf example_modeguard.conf \
		      example_rmdir.conf example_shook.conf

dist_includes_DATA = includes/alerts.inc includes/backup.inc includes/check.inc \
		     includes/lhsm.inc includes/modeguard.inc includes/rmdir.inc \
		     includes/rmdir_old.inc includes/shook.inc includes/tmpfs.inc
